<resources>
    <string name="app_name">Calculadora</string>
    <string name="strAC">AC</string>
    <string name="strDiv">/</string>
    <string name="strMul">X</string>
    <string name="strPlus">+</string>
    <string name="strMin">-</string>
    <string name="strEqual">=</string>
    <string name="strComma">,</string>
    <string name="str0">0</string>
    <string name="str1">1</string>
    <string name="str2">2</string>
    <string name="str3">3</string>
    <string name="str4">4</string>
    <string name="str5">5</string>
    <string name="str6">6</string>
    <string name="str7">7</string>
    <string name="str8">8</string>
    <string name="str9">9</string>
</resources>