<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="585dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strAC"
                style="?android:attr/button"/>

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/strDiv"
                style="?android:attr/button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str7"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str8"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str9"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strMul"
                style="?android:attr/button"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str4"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str5"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str6"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btnMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strMin"
                style="?android:attr/button"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str1"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str2"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str3"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strPlus"
                style="?android:attr/button"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/str0"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btnComma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strComma"
                style="?android:attr/button"
                />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strEqual"
                style="?android:attr/button"
                />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/etResultCalc"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/str0"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

</androidx.constraintlayout.widget.ConstraintLayout>